# media-player-tauri

./: components.d.ts  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: MediaControls.vue  MpvPlayer.vue
